# quantum-safe-hybrid-ml

./: .gitattributes  .gitignore  .gitkeep  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  cols.txt  create_pqc_modules.py  demo_input.txt  demo_output.txt  main.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
data/: README.md
ppt/: CSHO681CSP _ CS Project PPT template.pptx  CSHO681CSP _ CS Project PPT.pptx
reports/: baseline_results.md
results/metrics/: training_results.json
results/models/: final_model.npz
src/: __init__.py  api.py  baseline_model.py  benchmark.py  config.py  data_preprocessing.py  data_utils.py  demo_visuals.py  differential_privacy.py  federated_client.py  federated_server.py  homomorphic_encryption.py  interactive_demo.py  main.py  main_simulation.py  pqc_auth.py  pqc_channel.py  requirements.txt
tests/: __init__.py  test_crypto_protocol.py  test_he_and_dp.py
web-gui/: index.html  package-lock.json  package.json  tailwind.config.js
web-gui/src/: App.jsx  index.css
